--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
     <main>
         <form class="text-center formaccueil" method="POST" action="/">
-            <h2>Connexion</h2>
+            <h2 class="titreaccueil">Connexion</h2>
             <div class="icon">
                 <i class="icon ion-locked"></i>
             </div>
@@ -17,7 +17,8 @@
             <input class="form-control champform" type="text" name="NumCard" placeholder="Numéro de carte" required>
             <input class="form-control champformlast" type="password" name="Password" placeholder="Mot de passe" required>
             <button class="btn btn-primary boutonform" type="submit">Se connecter</button>
-            <a class="lienform" href="/inscription">Pas encore inscrit ?</a></form>
+            <a class="lienform" href="/inscription">Pas encore inscrit ?</a>
+        </form>
     </main>
 </body>
 
