--- a/views/inscription.ejs
+++ b/views/inscription.ejs
@@ -2,7 +2,7 @@
   
    <main>
         <form class="text-center formaccueil" method="POST" action="/inscription">
-            <h2>Inscription</h2>
+            <h2 class="titreaccueil">Inscription</h2>
             <div class="icon">
                 <i class="icon ion-clipboard"></i>
             </div>
