--- a/views/navbarNewUser.ejs
+++ b/views/navbarNewUser.ejs
@@ -36,5 +36,5 @@
             </div>
         </div>
     </nav>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/javascripts/jquery.min.js"></script>
+    <script src="/bootstrap/js/bootstrap.min.js"></script>
